--- a/SkillSnap.Api/appsettings.json
+++ b/SkillSnap.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
+    "Issuer": "SkillSnapApi",
+    "Audience": "SkillSnapClient"
+  }
 }
